k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: molam-connect
  labels:
    name: molam-connect
    app: molam-connect
